--- a/public/grant-master.css
+++ b/public/grant-master.css
@@ -2,6 +2,14 @@
     margin: 0;
 }
 
+@keyframes slungPants {
+    0% {transform: rotateY(0deg); filter: hue-rotate(0deg);}
+    25% {transform: rotateY(50deg); filter: hue-rotate(90deg);}
+    50% {transform: rotateY(0deg); filter: hue-rotate(180deg);}
+    75% {transform: rotateY(-50deg); filter: hue-rotate(275deg);}
+    100% {transform: rotateY(0deg); filter: hue-rotate(360deg);}
+}
+
 html {
     height: 100vh;
     width: 100vw;
@@ -16,4 +24,18 @@ body {
 h1 {
     font-size: 20em;
     color: lime;
+}
+
+button {
+    height: 300px;
+    width: 300px;
+    border-radius: 100px;
+    font-size: 5em;
+    background-color: salmon;
+    color: midnightblue;
+    margin: 50px;
+}
+
+.slung {
+    animation: slungPants 0.3s linear 10;
 }
