--- a/public/tori.css
+++ b/public/tori.css
@@ -2,6 +2,22 @@
     margin: 0;
 }
 
+@keyframes poopie {
+    0% {transform: rotate(0deg);}
+    25% {transform: rotate(20deg);}
+    50% {transform: rotate(0deg);}
+    75% {transform: rotate(-20deg);}
+    100% {transform: rotate(0deg);}
+}
+
+@keyframes pwned {
+    0% {transform: scaleX(1); filter: invert(0%);}
+    25% {transform: scaleX(1.5); filter: invert(100%);}
+    50% {transform: scaleX(1.0); filter: invert(0%);}
+    75% {transform: scaleX(0.5); filter: invert(100%);}
+    100% {transform: scaleX(1); filter: invert(0%);}
+}
+
 html {
     height: 100vh;
     width: 100vw;
@@ -16,4 +32,22 @@ body {
 h1 {
     font-size: 10em;
     color: darkslategrey;
+}
+
+button {
+    height: 300px;
+    width: 300px;
+    border-radius: 100px;
+    font-size: 5em;
+    background-color: black;
+    color: lime;
+    margin: 50px;
+}
+
+.rekt {
+    animation: poopie 0.2s linear 15;
+}
+
+.pwned {
+    animation: pwned 0.4s linear 5;
 }
