--- a/public/tori.css
+++ b/public/tori.css
@@ -18,6 +18,38 @@
     100% {transform: scaleX(1); filter: invert(0%);}
 }
 
+@keyframes uVizAd {
+    0% {transform: translateX(-200px); opacity: 0;}
+    5% {transform: translateX(-30px); opacity: 1;}
+    20% {opacity: 1;}
+    21% {opacity: 0;}
+    22% {opacity: 1;}
+    23% {opacity: 0;}
+    24% {opacity: 1;}
+    25% {opacity: 0;}
+    26% {opacity: 1;}
+    26.5% {opacity: 0;}
+    27% {opacity: 1;}
+    27.5% {opacity: 0;}
+    28% {opacity: 1;}
+    28.5% {opacity: 0;}
+    29% {opacity: 1;}
+    29.5% {opacity: 0;}
+    30% {opacity: 1;}
+    60% {opacity: 1;}
+    60.5% {opacity: 0;}
+    61% {opacity: 1;}
+    61.5% {opacity: 0;}
+    62% {opacity: 1;}
+    62.5% {opacity: 0;}
+    63% {opacity: 1;}
+    85% {opacity: 1;}
+    90% {transform: translateX(30px); opacity: 0.2;}
+    92% {opacity: 0;}
+    95% {transform: translateX(2000px);}
+    100% {transform: translateX(2000px);}
+}
+
 html {
     height: 100vh;
     width: 100vw;
@@ -42,6 +74,36 @@ button {
     background-color: black;
     color: lime;
     margin: 50px;
+}
+
+
+#uVizionAd {
+    position: fixed;
+    height: 20%;
+    width: 100%;
+    bottom: 0;
+    user-select: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#uVizionAd div {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#uVizionAd div img {
+    position: absolute;
+    opacity: 0;
+}
+
+.adTime {
+    animation: 5s linear 1 uVizAd;
 }
 
 .rekt {
