--- a/public/ian.css
+++ b/public/ian.css
@@ -77,18 +77,19 @@ button {
 }
 
 #uVizionAd {
+    top: 0;
     position: fixed;
-    height: 20%;
+    height: 100%;
     width: 100%;
-    bottom: 0;
     user-select: none;
+    pointer-events: none !important;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #uVizionAd div {
-    height: 100%;
+    height: 20%;
     width: 100%;
     position: relative;
     display: flex;
