--- a/public/style.css
+++ b/public/style.css
@@ -5,12 +5,22 @@
 html {
     height: 100vh;
     width: 100vw;
+    background-color: black;
 }
 
 body {
     height: 100%;
     width: 100%;
-    background-color: gray;
+    /* background-color: black; */
+    background: linear-gradient(black, black, black, purple);
+}
+
+@keyframes selectedHead {
+    0% {transform: scale(1) rotate(0deg);}
+    25% {transform: scale(1.3) rotate(10deg);}
+    50% {transform: scale(1) rotate(0deg);}
+    75% {transform: scale(1.3) rotate(-10deg);}
+    100% {transform: scale(1) rotate(0deg);}
 }
 
 @keyframes uVizAd {
@@ -46,18 +56,19 @@ body {
 }
 
 #uVizionAd {
+    top: 0;
     position: fixed;
-    height: 20%;
+    height: 100%;
     width: 100%;
-    bottom: 0;
     user-select: none;
+    pointer-events: none !important;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #uVizionAd div {
-    height: 100%;
+    height: 20%;
     width: 100%;
     position: relative;
     display: flex;
@@ -74,50 +85,54 @@ body {
     animation: 5s linear 1 uVizAd;
 }
 
-h1 {
-    background-color: black;
-    color: white;
-    font-family: 'comic-sans';
-    padding: 10px;
-    width: 70%;
-    margin: 20px auto;
-    text-align: center;
-}
-
-h3 {
-    background-color: black;
-    color: white;
-    font-family: 'comic-sans';
-    padding: 5px;
-    width: 60%;
-    margin: 10px auto;
-    text-align: center;
-}
-
-.divide {
-    width: 90%;
-    height: 6px;
+canvas {
     background-color: pink;
-    margin: 20px auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 75%;
+    width: 100%;
+    z-index: 1;
 }
 
-@keyframes pulse {
-    0% {transform: scale(1);}
-    50% {transform: scale(1.3);}
-    100% {transform: scale(1);}
+#avatarHeads {
+    position: fixed;
+    top: 5%;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 50%;
+    width: 20%;
+    border: 1px silver solid;
+    border-radius: 20px 5px 5px 40px;
+    z-index: 2;
 }
 
-h4 {
-    color: lime;
-    font-size: 3em;
-    width: 70%;
-    text-align: center;
-    animation: pulse 3s linear infinite;
-    margin: 5px auto;
-}
-
-img {
+.avatarHead {
     width: 80%;
-    display: block;
-    margin: 30px auto;
+}
+
+.selectedHead {
+    animation: 1.4s linear infinite selectedHead;
+}
+
+#avatarNameWrap {
+    position: fixed;
+    bottom: 0;
+    height: 400px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#avatarName {
+    font-family: 'Comic Sans MS';
+    font-size: 10em;
+    color: black;
+    text-shadow: -10px -20px  30px yellow;
+    width: 100%;
+    text-align: center;
 }
