--- a/public/ian.css
+++ b/public/ian.css
@@ -86,6 +86,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 #uVizionAd div {
@@ -100,6 +101,7 @@ button {
 #uVizionAd div img {
     position: absolute;
     opacity: 0;
+    width: 90%;
 }
 
 .adTime {
