--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     background-color: black;
 }
@@ -65,6 +65,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 #uVizionAd div {
@@ -79,6 +80,7 @@ body {
 #uVizionAd div img {
     position: absolute;
     opacity: 0;
+    width: 90%;
 }
 
 .adTime {
@@ -86,7 +88,7 @@ body {
 }
 
 canvas {
-    background-color: pink;
+    /* background-color: pink; */
     position: fixed;
     top: 0;
     left: 0;
