--- a/public/leaderboard.css
+++ b/public/leaderboard.css
@@ -37,6 +37,12 @@
     100% {transform: skew(0);}
 }
 
+@keyframes winning {
+    0%   {transform: scale(0);}
+    50%  {transform: scale(1.2);}
+    100% {transform: scale(0);}
+}
+
 * {
     margin: 0;
     cursor: none;
@@ -116,7 +122,15 @@ body {
     font-style: italic;
 }
 
-#nugget {
+.dead {
+    position: absolute;
+    z-index: -1;
+    height: 270px;
+    bottom: 0;
+    left: -5%;
+}
+
+.nugget {
     position: absolute;
     z-index: -1;
     height: 360px;
@@ -124,12 +138,24 @@ body {
     left: 30%;
 }
 
-#prawn {
+.prawn {
     position: absolute;
     z-index: -1;
     height: 270px;
     bottom: 0;
-    left: 45%;
+    left: 42%;
+}
+
+.worm {
+    position: absolute;
+    z-index: -1;
+    height: 360px;
+    bottom: 0;
+    left: 80%;
+}
+
+.winning {
+    animation: winning 0.3s infinite;
 }
 
 video {
