--- a/public/pb/pb-m.css
+++ b/public/pb/pb-m.css
@@ -1,13 +1,6 @@
 * {
     margin: 0;
-}
-
-@keyframes slungPants {
-    0% {transform: rotateY(0deg); filter: hue-rotate(0deg);}
-    25% {transform: rotateY(50deg); filter: hue-rotate(90deg);}
-    50% {transform: rotateY(0deg); filter: hue-rotate(180deg);}
-    75% {transform: rotateY(-50deg); filter: hue-rotate(275deg);}
-    100% {transform: rotateY(0deg); filter: hue-rotate(360deg);}
+    touch-action: manipulation;
 }
 
 html {
@@ -16,24 +9,20 @@ html {
 }
 
 body {
-    height: 100%;
+    position: fixed;
+    height: 100vh;
     width: 100%;
     background-color: pink;
 }
 
-h1 {
-    font-size: 20em;
-    color: lime;
-}
 
 button {
-    height: 300px;
-    width: 300px;
-    border-radius: 100px;
-    font-size: 5em;
+    height: 50%;
+    width: 100vw;
+    font-size: 2em;
     background-color: salmon;
     color: midnightblue;
-    margin: 50px;
+    margin: 0 auto;
 }
 
 .slung {
