--- a/public/inst/instructions.css
+++ b/public/inst/instructions.css
@@ -48,7 +48,7 @@ body {
 
 #background {
     position: fixed;
-    z-index: -1;
+    z-index: -2;
     width: 100%;
     height: 100%;
     background: linear-gradient(black, black, black, purple);
@@ -68,16 +68,19 @@ body {
 #inst h2 {
     font-size: 8em;
     margin-left: 50px;
+    margin-top: 80px;
     animation: orange 1s linear infinite;
 }
 
 #canvas {
     position: fixed;
-    width: 70%;
-    height: 80%;
-    bottom: 0;
-    right: 0;
-    background-color: red;
+    z-index: -1;
+    /* width: 70%;
+    height: 80%; */
+    bottom: -400px;
+    right: -250px;
+    transform: rotate(-15deg);
+    /* background-color: red; */
 }
 
 #uVizionAd {
