--- a/public/wp/wormperson.css
+++ b/public/wp/wormperson.css
@@ -218,3 +218,27 @@ html {
 .pwned {
     animation: pwned 0.4s linear 5;
 }
+
+
+@keyframes nuke {
+    0%   {transform: scale(1);}
+    50%  {transform: scale(2.6);}
+    100% {transform: scale(1);}
+}
+
+#nuke {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 50;
+    /* background-color: lime; */
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#nukeImg {
+    width: 90%;
+    animation: nuke 2s linear infinite;
+}
