--- a/public/wp/wp-m.css
+++ b/public/wp/wp-m.css
@@ -21,14 +21,9 @@ body {
     background-color: moccasin;
 }
 
-h1 {
-    font-size: 20em;
-    color: darkslategrey;
-}
-
 button {
-    height: 300px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
     border-radius: 100px;
     font-size: 5em;
     background-color: black;
