--- a/public/leaderboard.css
+++ b/public/leaderboard.css
@@ -307,3 +307,26 @@ video {
 .adTime {
     animation: 5s linear 1 uVizAd;
 }
+
+@keyframes nuke {
+    0%   {transform: scale(1);}
+    50%  {transform: scale(2.6);}
+    100% {transform: scale(1);}
+}
+
+#nuke {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 50;
+    /* background-color: lime; */
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#nukeImg {
+    width: 90%;
+    animation: nuke 2s linear infinite;
+}
