--- a/public/style.css
+++ b/public/style.css
@@ -176,3 +176,27 @@ canvas {
 span {
     pointer-events: none;
 }
+
+@keyframes nuke {
+    0%   {transform: scale(1);}
+    50%  {transform: scale(2.6);}
+    100% {transform: scale(1);}
+}
+
+#nuke {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 50;
+    /* background-color: lime; */
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+#nukeImg {
+    width: 90%;
+    animation: nuke 2s linear infinite;
+}
