--- a/public/pb/prawnboy.css
+++ b/public/pb/prawnboy.css
@@ -62,6 +62,25 @@ body {
     z-index: -10;]
 }
 
+#retryButtonWrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 30;
+    display: none;
+    width: 100vw;
+    height: 100%;
+    background-color: rgba(100, 100, 100, 0.2);
+    justify-content: center;
+    align-items: center;
+}
+
+#retryButton {
+    color: salmon;
+    text-shadow: 1px 1px 2px black;
+    font-size: 1.6em;
+}
+
 @keyframes pls {
     0% {transform: rotateY(0deg);}
     25% {transform: rotateY(30deg);}
