--- a/public/screen1/screen1.css
+++ b/public/screen1/screen1.css
@@ -44,6 +44,12 @@ html {
     height: 100vh;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(black, black, black, purple);
+}
+
 #uVizionAd {
     top: 0;
     position: fixed;
